--- a/.github/workflows/CDYA.yml
+++ b/.github/workflows/CDYA.yml
@@ -1,33 +1,39 @@
-name: CD Yandex
+name: CI/CD pipline
 on:
+    push:
+    pull_request:
     workflow_dispatch:
 
 jobs:
-    build-and-push-to-yc:
+    test:
+        runs-on: ubuntu-latest
+        steps:
+          - uses: actions/checkout@v3
+          - name: Prepare for tests
+            run: |
+              sudo apt update
+              sudo apt install -y python3-pip
+              pip install -r requirements.txt
+              docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/jstore:latest
+              docker run -p 80:80 -d ${{ secrets.DOCKER_USERNAME }}/jstore:latest
+              sleep 5
+          - name: Run tests
+            run: |
+              pytest comp_test.py
+              pytest integration_test.py
+    build-and-push:
+        needs: [test]
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - name: Build docker image
-              run: docker build . --file Dockerfile --tag cr.yandex/${{secrets.YC_REGISTRY_ID }}/rickandmorty:latest
-            - name: Login to YC Registry
+            - name: Build dockerfile
+              run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/jstore:latest
+
+            - name: Push to dockerhub
               uses: docker/login-action@v3.0.0
               with:
-                registry: cr.yandex
-                username: json_key
-                password: ${{ secrets.YC_KEYS }}
-            - name: Push tag to YC Registry
-              run: docker push cr.yandex/${{ secrets.YC_REGISTRY_ID }}/jstore:latest 
-    deploy:
-        name: Deploy
-        runs-on: ubuntu-latest
-        needs: [build-and-push-to-yc]
-        steps:
-          - name: Deploy serverless container
-            uses: yc-actions/yc-sls-container-deploy@v1
-            with:
-              yc-sa-json-credentials: ${{ secrets.YC_KEYS }}
-              container-name: ${{ secrets.YC_CONTAINER_NAME }}
-              folder-id: ${{ secrets.YC_FOLDER_ID }}
-              revision-image-url: cr.yandex/${{ secrets.YC_REGISTRY_ID }}/jstore:latest
-              revision-service-account-id: ${{ secrets.YC_SA_ID }}
-
+                username: ${{ secrets.DOCKER_USERNAME }}
+                password: ${{ secrets.DOCKER_PASSWORD }}
+            - name: Push tag to DockerHub
+              run: docker push ${{ secrets.DOCKER_USERNAME }}/jstore:latest
+    
